--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#conceptModal">
                     <div class="category" id="concept">
                         <h4 class="cl-effect-7">
-                            <a class="cl-effect-7" href="#" data-toggle="modal" data-target="#conceptModal">Talentstix Konzept</a>
+                            <a href="#talentstix">Talentstix Konzept</a>
                         </h4>
                     </div>
                 </button>    
@@ -121,7 +121,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#easyFitModal">
                     <div class="category" id="easyFit">
                         <h4 class="cl-effect-7">
-                            <a href="#" data-toggle="modal" data-target="#easyFitModal">Easy Fit</a>
+                            <a href="#talentstix">Easy Fit</a>
                         </h4>
                     </div>
                 </button>
@@ -131,7 +131,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#productModal">
                     <div class="category" id="products">
                         <h4 class="cl-effect-7">
-                            <a href="#" data-toggle="modal" data-target="#productModal">Produkte</a>
+                            <a href="#talentstix">Produkte</a>
                         </h4>
                     </div>
                 </button>
@@ -145,7 +145,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#mediaModal">
                     <div class="category" id="media">
                         <h4 class="cl-effect-7">
-                            <a href="#" data-toggle="modal" data-target="#mediaModal">Media</a>
+                            <a href="#talentstix">Media</a>
                         </h4>
                     </div>
                 </button>
@@ -155,7 +155,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#teamModal">
                     <div class="category" id="team">
                         <h4 class="cl-effect-7">
-                            <a href="#" data-toggle="modal" data-target="#teamModal">Team</a>
+                            <a href="#talentstix">Team</a>
                         </h4>
                     </div>
                 </button>
@@ -165,7 +165,7 @@
                 <button class="category-wrapper" data-toggle="modal" data-target="#contactModal">
                     <div class="category" id="contact">
                         <h4 class="cl-effect-7 ">
-                            <a href="#" data-toggle="modal" data-target="#contactModal">Kontakt</a>
+                            <a href="#talentstix">Kontakt</a>
                         </h4>
                     </div>
                 </button>
