--- a/index.html
+++ b/index.html
@@ -262,16 +262,57 @@
                         </div>
                         <div class="modal-body">
                             <img src="img/Bild1.png">
-                            <h2>Marco Schmuck</h2>
+                            <h2>Status quo</h2>
                             <div>
-                                <h4>About Marco</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p class="subtitle">Die Golfschule Schmuck und HIO-Fitting setzt auf individuelle Anpassung und Kostensenkung bei Kinderschlägern.</p>
+
+                                <p>Fitting für Kinder – ein Thema, welches in seiner Bedeutung stark unterschätzt wird. Geht es um die Ausrüstung der kleinsten Golfer sind die Eltern in der Regel mit mehreren Problemen konfrontiert: Kinder wachsen schnell – damit verändern sich permanent die Anforderungen an Schlägerlänge, Gewicht, Griffgröße, Loft und Lie. Hinzu kommt, dass mit zunehmendem Spielvermögen auch eine Ausweitung des Sets auf mehr Eisen und Hölzer Sinn macht. Mit der ständigen Veränderung der Sets sind in der Regel beträchtliche Anschaffungskosten verbunden.</p>
                             </div>
+
+                            <h2>Warum TalentStix?</h2>
+                            <ul>
+                                <li> <p><em>Gebaut von deutschen Ingenieuren:</em> Die Schläger überzeugen durch ihre Präzision, die Weite der Schläge, die Fehlerverzeihbarkeit sowie das individuelle Design.</p></li>
+
+                                <li><p><em>Kontinuierliche Abstimmung:</em> Schlägerlänge, Loft und Lie werden individuell angepasst. Gerade bei Kindern ist dies ein entscheidender Punkt, da sich der Schwung sonst an falsches Material anpasst.</p></li>
+
+                                <li><p><em>Kostensenkung bei 100% Passgenauigkeit:</em> Die jährlichen Kosten für Ausrüstungsanschaffungen sinken, da Schläger durch spezielle Adapter verlängert werden können.</p></li>
+
+                                <li><p><em>„Mein eigener Schläger“:</em> Das Vertrauen in die eigene Ausrüstung steigt, weil die Kinder- und Jugendlichen wissen, dass die Schläger perfekt passen.</p></li>
+                            </ul>
+
+                            <h2>Zielgruppe</h2>
+                            <p>Ab einem Alter von 8 Jahren ist eine Anpassung der Schläger sinnvoll. Ob Mädchen oder Junge, Rechtshänder oder Linkshänder spielt dabei keine Rolle. In der Regel wachsen Jugendliche mit einem Alter von circa 15 Jahren aus den Kinderschlägern raus und sie können bei uns auf Damen- bzw. Herrenschläger umstellen</p>
+
+                            <h2>Vorteile Qualität vs. Finanziell</h2>
+                            <img src="img/talentstix_concept_1.png">
+                            <img src="img/talentstix_concept_2.png">
+                            <img src="img/talentstix_concept_3.png">
+                            <img src="img/talentstix_concept_4.png">
+
+                            <h2>Fittingablauf</h2>
+                            <p>Wohl findet man in Deutschland keine technologisch hochwertiger ausgestattete Fittingstation als im kleinen Vorort Münchens. Folgende Messungen sind Teil des Fittingprozesses:</p>
+                            <ol>
+                                <li><p>Vermessung des eigenen Equipments mittels digitaler Maschinen</p>
+                                    <img class="smallmid" src="img/talentstix_concept_5.png">
+                                </li>
+
+                                <li><p>Eingangsmessung auf der Kraftmessplatte um körperlich Potentiale und Defizite herauszustellen</p>
+                                    <img class="smallmid" src="img/talentstix_concept_6.png">
+                                    <img class="smallmid" src="img/talentstix_concept_7.png">
+                                </li>
+
+                                <li><p>Aufnahme und Vergleich von relevanten Ballflugparameter wie Schlagweite, Flughöhe, Spin, Abflugwinkel, Ballgeschwindigkeit mittels neuester Radar- und Kameratechnologie</p>
+                                    <img src="img/talentstix_concept_8_alpha.png">
+                                </li>
+
+                                <li><p>Bestimmung des Testsiegers anhand gemessener Daten sowie eigens entwickeltem TalentStix Algorithmus</p>
+                                    <img class="smallmid" src="img/talentstix_concept_9.png">        
+                                </li>
+
+                                <li><p>Diskussion der Bewegung aus biomechanischen Gesichtspunkten und Ableitung eines Trainingsplans</p>
+                                    <img class="smallmid" src="img/talentstix_concept_10.png">        
+                                </li>
+                            </ol>
                         </div>
                     </div>
                 </div>
