--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                     <div class="testimonial">
                         <h4>Ich bin begeistert</h4>
-                        <p class="testimonial-text">Ich habe mir vor ca. 1 Jahr den kpl. Eisensatz, zwei Rescues, ein FW-Holz und den Driver von HIO fitten lassen. Ich bin begeistert. Mein alter kpl. King-Cobra-Satz war schon gefittet, jedoch von unserem lokalen Pro-Shop. <br>
+                        <p class="testimonial-text">Ich habe mir vor ca. 1 Jahr den kpl. Eisensatz, zwei Rescues, ein FW-Holz und den Driver von HIO fitten lassen. Ich bin begeistert. Mein alter kompletter King-Cobra-Satz war schon gefittet, jedoch von unserem lokalen Pro-Shop. <br>
                         Heute erkenne ich, was man mit wirklich gutem Fitting noch herausholen kann. Der Längengewinn liegt bei mindestens 10m. Wichtig erscheint mir auch, dass wirklich hochwertige und an die eigene Schwunggeschwindigkeit angepasste Schäfte verwendet werden. Da mangelt es anscheinend häufig bei den Standardanbietern und anderen Fittern... <br>
                         Marco, danke!!!</p>
                         <p class="testimonial-name">Klaus Knauer</p>
@@ -357,7 +357,11 @@
                             <h2>Vorteile Qualität vs. Finanziell</h2>
                             <img src="img/talentstix_concept_1.png">
                             <img src="img/talentstix_concept_2.png">
+
+                            <h4>Talentstix - beispielhafter Verlauf</h4>
                             <img src="img/talentstix_concept_3.png">
+
+                            <h4>Finanzielle Auswirkungen von TalentStix</h4>
                             <img src="img/talentstix_concept_4.png">
 
                             <h2>Fittingablauf</h2>
@@ -416,7 +420,7 @@
                             <h4 class="modal-title" id="easyFitModalLabel">Easy Fit</h4>
                         </div>
                         <div class="modal-body">
-                            <form action="mailto:lorenz.prasch@gmail.com" method="post" class="form-horizontal" role="form" id="easyFitForm" enctype="text/plain">
+                            <form action="mailto:info@talentstix.de" method="post" class="form-horizontal" role="form" id="easyFitForm" enctype="text/plain">
                                 <div id="formcontainer">
                                 
                                 <input hidden type="text" name=" " value="=>    Bitte schicken Sie folgende Mail nun an uns, wir werden Sie dann bald kontaktieren">
@@ -765,7 +769,7 @@
                             <img id="SchmuckLogo" src="img/Logo_Golfschule_Schmuck.svg">
                             <div>
                                 <p>Die Golfschule um Maria und Marco Schmuck steht für absolutes High-End Training wie es nicht an vielen Standorten in Deutschland zu finden ist. Von High-Speed Kameras über Radargeräte bis hin zur Anpassung des Materials,  hier wird jeder Aspekt eines innovativen Golftrainings berücksichtigt. Als bayerische Jugendtrainer des Jahres 2013 bringt Marco Schmuck alle Fähigkeiten mit, um einen perfekten Grundstein für die Karriere junger Talente zu legen.</p>
-                                <p>Zitat Marco Schmuck zu TalentStix: <em> "Seit vielen Jahren beschäftige ich mich mit dem dem Thema Leistungssport im Golf. Vor allem mit Jugendlichen und Kindern habe ich großen Spaß zu arbeiten und bin über die sportliche Entwicklung der letzten Jahre sehr begeistert. Das liegt vor allem an dem besseren Verständnis der Golflehrer für den Sport.^In den leistungsbestimmenden Faktoren Taktik, Technik und  Psyche hat sich eine Menge getan. Die Ausrüstung für Kinder und Jugendliche stand bisher aber nicht wirklich im Vordergrund. Mit Talentstix haben wir ein fantastisches Konzept geschaffen, damit die jungen Athleten sich maximal schnell entwickeln können. Ich bin froh Teil dieses Konzept sein zu dürfen."</em></p>
+                                <p>Marco Schmuck über TalentStix: <em> "Seit vielen Jahren beschäftige ich mich mit dem dem Thema Leistungssport im Golf. Vor allem mit Jugendlichen und Kindern habe ich großen Spaß zu arbeiten und bin über die sportliche Entwicklung der letzten Jahre sehr begeistert. Das liegt vor allem an dem besseren Verständnis der Golflehrer für den Sport.^In den leistungsbestimmenden Faktoren Taktik, Technik und  Psyche hat sich eine Menge getan. Die Ausrüstung für Kinder und Jugendliche stand bisher aber nicht wirklich im Vordergrund. Mit Talentstix haben wir ein fantastisches Konzept geschaffen, damit die jungen Athleten sich maximal schnell entwickeln können. Ich bin froh Teil dieses Konzept sein zu dürfen."</em></p>
                                 <h4>Kontakt</h4>
                                 <p>Website <a href="http://www.marco-schmuck.de">www.marco-schmuck.de</a> <br>
                                    Mail <a href="mailto:golf@marco-schmuck.de">golf@marco-schmuck.de</a></p>
@@ -775,7 +779,7 @@
                             <img id="hioLogo" class="smallmid" src="img/hio_logo.gif">
                             <div>
                                 <p>HoleInOne – Fitting hat sich in den letzten Jahren voll und ganz auf das Material rund um einen Golfschläger spezialisiert. Das interdisziplinäre Team bestehend aus Ingenieuren, Chemiker, Sportwissenschaftler und BWlern hat es sich zur Aufgabe gemacht für Anfänger, Profis, Erwachsene und auch Kinder jeweils das perfekte Schlägerset zu finden. Neben starken golferischen Fähigkeiten macht das Team um HIO aber vor allem aus dem Thema Fitting einen höchst wissenschaftlichen und damit transparenten Prozess. Wer also glaubt er sei bezüglich Equipment an der Weisheit letzten Schlusses angekommen verlässt die Fittinghallen Münchens meist mit einer ganz neuen Sichtweise.</p>
-                                <p>Marco Burger über TalentStix: <em>„ Für mich gibt es aktuelle nichts spannenderes als die Art und Weise wie Kinder- und Jugendliche an ein Fitting rangehen zu beobachten. Die Offenheit, Ehrlichkeit und Zielstrebigkeit vereinfachen den Prozess die richtigen Schläger zu finden um ein Vielfaches. Durch TalentStix kommen Kinder erstmals in den Genuss ihr maximales Potential auszuschöpfen. Die Möglichkeit Schläger ständig neu anzupassen, ohne dabei in ein komplett neues Set zu investieren lohnt sich nicht nur für Kinder sondern auch für ihre Eltern.“ </em></p>
+                                <p>Marco Burger über TalentStix: <em>„ Für mich gibt es aktuell nichts spannenderes als die Art und Weise wie Kinder- und Jugendliche an ein Fitting rangehen zu beobachten. Die Offenheit, Ehrlichkeit und Zielstrebigkeit vereinfachen den Prozess die richtigen Schläger zu finden um ein Vielfaches. Durch TalentStix kommen Kinder erstmals in den Genuss ihr maximales Potential auszuschöpfen. Die Möglichkeit Schläger ständig neu anzupassen, ohne dabei in ein komplett neues Set zu investieren lohnt sich nicht nur für Kinder sondern auch für ihre Eltern.“ </em></p>
                                 <h4>Kontakt</h4>
                                 <p>Website <a href="http://www.hio-fitting.de">www.hio-fitting.de</a> <br>
                                    Mail <a href="mailto:info@hio-fitting.de">info@hio-fitting.de</a></p>
