--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                     <div class="testimonial">
                         <h4>Ich bin begeistert</h4>
-                        <p class="testimonial-text">Ich habe mir vor ca. 1 Jahr den kpl. Eisensatz, zwei Rescues, ein FW-Holz und den Driver von HIO fitten lassen. Ich bin begeistert. Mein alter kompletter King-Cobra-Satz war schon gefittet, jedoch von unserem lokalen Pro-Shop. <br>
+                        <p class="testimonial-text">Ich habe mir vor ca. 1 Jahr den kompletten Eisensatz, zwei Rescues, ein FW-Holz und den Driver von HIO fitten lassen. Ich bin begeistert. Mein alter kompletter King-Cobra-Satz war schon gefittet, jedoch von unserem lokalen Pro-Shop. <br>
                         Heute erkenne ich, was man mit wirklich gutem Fitting noch herausholen kann. Der Längengewinn liegt bei mindestens 10m. Wichtig erscheint mir auch, dass wirklich hochwertige und an die eigene Schwunggeschwindigkeit angepasste Schäfte verwendet werden. Da mangelt es anscheinend häufig bei den Standardanbietern und anderen Fittern... <br>
                         Marco, danke!!!</p>
                         <p class="testimonial-name">Klaus Knauer</p>
