--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                     1
                                 </div>
                                 <p>Vermessung des eigenen Equipments mittels digitaler Maschinen</p>
-                                <img class="smallmid" src="img/talentstix_concept_9.png">
+                                <img class="smallmid" src="img/1mitiPad.png">
                             </div>
 
                             <div class="fittingstep fittingstep-second">
@@ -374,7 +374,7 @@
                                     2
                                 </div>
                                 <p>Eingangsmessung auf der Kraftmessplatte um körperlich Potentiale und Defizite herauszustellen</p>
-                                <img class="smallmid" src="img/talentstix_concept_9.png">
+                                <img class="smallmid" src="img/2mitiPad.png">
                             </div>
 
                             <div class="fittingstep fittingstep-third">
@@ -382,7 +382,7 @@
                                     3
                                 </div>
                                 <p>Aufnahme und Vergleich von relevanten Ballflugparameter wie Schlagweite, Flughöhe, Spin, Abflugwinkel, Ballgeschwindigkeit mittels neuester Radar- und Kameratechnologie</p>
-                                <img class="smallmid" src="img/talentstix_concept_9.png">
+                                <img class="smallmid" src="img/3mitiPad.png">
                             </div>
 
                             <div class="fittingstep fittingstep-fourth">
@@ -390,7 +390,7 @@
                                     4
                                 </div>
                                 <p>Bestimmung des Testsiegers anhand gemessener Daten sowie eigens entwickeltem TalentStix Algorithmus</p>
-                                <img class="smallmid" src="img/talentstix_concept_9.png"> 
+                                <img class="smallmid" src="img/4mitiPad.png"> 
                             </div>
 
                             <div class="fittingstep fittingstep-fifth">
@@ -398,7 +398,7 @@
                                     5
                                 </div>
                                 <p>Diskussion der Bewegung aus biomechanischen Gesichtspunkten und Ableitung eines Trainingsplans</p>
-                                <img class="smallmid" src="img/talentstix_concept_9.png">
+                                <img class="smallmid" src="img/5mitiPad.png">
                             </div>
                         </div>
                     </div>
