--- a/index.html
+++ b/index.html
@@ -248,18 +248,18 @@
                 <div class="row">
                     <div class="col-md-5">
                         <div class="swingtype">
-                            <!-- <div class="videoWrapper">                          
-                                <iframe src="https://www.youtube.com/embed/sXtekwuT8R0" frameborder="0" allowfullscreen></iframe>
-                            </div> -->
+                            <div class="videoWrapper">                          
+                                <iframe src="https://www.youtube.com/embed/I_FJN153e2Q" frameborder="0" allowfullscreen></iframe>
+                            </div>
                             <h4>Der Heber</h4>
                             <p>Bei diesem Schwungtyp fliegen gut getroffenen Bälle häufig zu hoch und haben wenig Power. Fehlschläge sind eher getoppt und oft nicht in der Mitte der Schlagfläche getroffen. Wenig bis kein Divot bzw. Bodenkontakt vor dem Ball wären typische Folgen. Ein weiteres Kennzeichen wären angezogene Arme im/nach dem Treffmoment. <br>
                             Diese Bewegungen entstehen  nicht zu selten bei Kindern, die mit einem falschen Liewinkel oder einer falschen Schlägerlänge spielen.</p>
                         </div>
 
                         <div class="swingtype">
-                            <!-- <div class="videoWrapper"> 
-                                <iframe src="https://www.youtube.com/embed/_opnFeTrj4M" frameborder="0" allowfullscreen></iframe>
-                            </div> -->
+                            <div class="videoWrapper"> 
+                                <iframe src="https://www.youtube.com/embed/g0kJa9MgzG0" frameborder="0" allowfullscreen></iframe>
+                            </div>
                                 <h4>Der Steher</h4>
                                 <p>Bei diesem Schwungtyp fliegen die gut getroffenen Bälle gerade aber nicht sonderlich weit. Der Steher schwingt vorwiegend aus den Armen und hat demnach einen geringen Gewichtstransfer. Typische Kennzeichen wären ein kleiner Schwungradius während der Ausholbewegung, sowie eine zu geringe Schulterrotation. Ein zu frühes Auflösen der Körperwinkel zum Treffmoment ist ebenfalls ein typisches Bewegungsmuster für den Steher komplett aufgelöst haben. <br>
                                 Zu lange, zu harte oder auch zu steife Schäfte können diesen Typ negativ beeinflussen. Haltungsschäden sowie Ausgleichsbewegungen sind demnach keine seltene Folge. Immerhin führen 10g Mehrgewicht im Schaft bei einer dynamischen Bewegung zu bis zu 2,5kg mehr an Gewicht was beschleunigt und ausbalanciert werden muss.</p>
@@ -267,18 +267,18 @@
                     </div>  
                 <div class="col-md-5 col-md-offset-2">
                     <div class="swingtype">
-                            <!-- <div class="videoWrapper"> 
-                                <iframe src="https://www.youtube.com/embed/_opnFeTrj4M" frameborder="0" allowfullscreen></iframe>
-                            </div> -->
+                            <div class="videoWrapper"> 
+                                <iframe src="https://www.youtube.com/embed/qIegT7zU5jA" frameborder="0" allowfullscreen></iframe>
+                            </div>
                             <h4>Der Drücker</h4>
                             <p>Die gut getroffenen Bälle fliegen eher flach. Mit einem Eisen 7 ein Grün anzuspielen ist für diese Kinder schwierig, da die Bälle mit einem zu flachen Winkel in das Grün einschlagen. Häufig rollen die Bälle hinter das Grün. Die schlecht getroffenen Bälle sind eher innen an der Schlagfläche getroffen und es wird meist zu viel Gras mitgenommen. Gerade mit den Hölzern werden die Bälle deshalb oft unterschlagen und fliegen mehr hoch als weit. <br>
                             Der Drücker hat meist ein Schlägerset, welches bezüglich der Loftzahlen nicht ideal aufeinander angepasst ist. Je nach Flughöhe benötigt jedes Kind andere Loftstufen. Auch auf sinnvolle Abstände von einem Eisen zum Nächsten sollte bei Kindern ganz besonders geachtet werden. Ein gut aufeinander abgestimmtes Set unterstützt eine konstante Schwungbewegung.</p>
                     </div>
 
                     <div class="swingtype">
-                        <!-- <div class="videoWrapper"> 
-                            <iframe width="100%" src="https://www.youtube.com/embed/_opnFeTrj4M" frameborder="0" allowfullscreen></iframe>
-                        </div> -->
+                        <div class="videoWrapper"> 
+                            <iframe width="100%" src="https://www.youtube.com/embed/aeP9JMo-iUM" frameborder="0" allowfullscreen></iframe>
+                        </div>
                             <h4>Der Koppler</h4>
                             <p>Der Koppler hat verstanden, wie er seine Energie effizient auf den Golfball mit viel Energie übertragen kann. Er benutzt die richtige Bewegungskette von unten nach oben: Zuerst werden die Beine eingesetzt, dann der Rumpf, dann die Arme  und anschließend geht die Energie von Schaft – in den Kopf – an den Ball. Das Prinzip des optimalen Beschleunigungsweges sowie der Koordination der Teilimpulse beeinflusst entscheidend die Schlagweite und die Stabilität des Spielers. <br>
                             Eine regelmäßige Überprüfung des Materials  ist speziell für sehr früh entwickelte Spieler essentiell. Das frühe Verstehen einer „neutralen“ Bewegung sowie das Erlernen verschiedener Flugkurven helfen in verschiedensten Situation erfolgreich reagieren zu können. Wer möchte schon sein Talent wegen ein paar unpassender Schläger aufs Spiel setzen?</p>
@@ -318,10 +318,37 @@
             <footer>
                 <div class="container text-center">
                     <p>Copyright &copy; Talentstix 2014</p>
+                    <a href="#" title="Impressum" data-toggle="modal" data-target="#impressumModal">Impressum</a>
                 </div>
             </footer>
 
             <!-- Modalwindows -->
+
+            <!-- Impressum Modal -->
+            <div class="modal fade" id="impressumModal" tabindex="-1" role="dialog" aria-labelledby="conceptModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <h4 class="modal-title" id="conceptModalLabel">Impressum</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p><span class="more">Angaben gemäß § 5 TMG</span><br />Technisch und inhaltlich verantwortlich:</p>
+                            <p><span class="more">Benjamin Pfister</span><br />Schleißheimerstr. 183a<br />80797 München<br /><br />Keine Abmahnung ohne vorherigen Kontakt!</p>
+                            <p>Sollte der Inhalt oder die Aufmachung dieser Seiten fremde Rechte Dritter oder gesetzliche Bestimmungen verletzen, so bitten wir um eine entsprechende Nachricht ohne Kostennote.</p>
+                            <p>Die Beseitigung einer möglicherweise von diesen Seiten ausgehenden Schutzrecht-Verletzung durch Schutzrecht-InhaberInnen selbst darf nicht ohne unsere Zustimmung stattfinden. Wir garantieren, dass die zu Recht beanstandeten Passagen unverzüglich entfernt werden, ohne dass von Ihrer Seite die Einschaltung eines Rechtsbeistandes erforderlich ist. Dennoch von Ihnen ohne vorherige Kontaktaufnahme ausgelöste Kosten werden wir vollumfänglich zurückweisen und gegebenenfalls Gegenklage wegen Verletzung vorgenannter Bestimmungen einreichen.</p>
+                            <p>Vielen Dank für Ihr Verständnis.</p>
+                            <p><br /><br /><span class="more">Haftungsausschluss</span></p>
+                            <p>1. Inhalt des Onlineangebotes<br />Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der bereitgestellten Informationen. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt.<br />Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.</p>
+                            <p><br /><br /><span class="more">2. Verweise und Links</span><br />Bei direkten oder indirekten Verweisen auf fremde Webseiten ("Hyperlinks"), die außerhalb des Verantwortungsbereiches des Autors liegen, würde eine Haftungsverpflichtung ausschließlich in dem Fall in Kraft treten, in dem der Autor von den Inhalten Kenntnis hat und es ihm technisch möglich und zumutbar wäre, die Nutzung im Falle rechtswidriger Inhalte zu verhindern. Der Autor erklärt hiermit ausdrücklich, dass zum Zeitpunkt der Linksetzung keine illegalen Inhalte auf den zu verlinkenden Seiten erkennbar waren. Auf die aktuelle und zukünftige Gestaltung, die Inhalte oder die Urheberschaft der verlinkten/verknüpften Seiten hat der Autor keinerlei Einfluss. Deshalb distanziert er sich hiermit ausdrücklich von allen Inhalten aller verlinkten /verknüpften Seiten, die nach der Linksetzung verändert wurden. Diese Feststellung gilt für alle innerhalb des eigenen Internetangebotes gesetzten Links und Verweise sowie für Fremdeinträge in vom Autor eingerichteten Gästebüchern, Diskussionsforen, Linkverzeichnissen, Mailinglisten und in allen anderen Formen von Datenbanken, auf deren Inhalt externe Schreibzugriffe möglich sind. Für illegale, fehlerhafte oder unvollständige Inhalte und insbesondere für Schäden, die aus der Nutzung oder Nichtnutzung solcherart dargebotener Informationen entstehen, haftet allein der Anbieter der Seite, auf welche verwiesen wurde, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist.</p>
+                            <p><br /><br /><span class="more">3. Urheber- und Kennzeichenrecht</span><br />Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu beachten, von ihm selbst erstellte Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind!<br />Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokumente, Videosequenzen und Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.</p>
+                            <p><br /><br /><span class="more">4. Datenschutz</span><br />Sofern innerhalb des Internetangebotes die Möglichkeit zur Eingabe persönlicher oder geschäftlicher Daten (Emailadressen, Namen, Anschriften) besteht, so erfolgt die Preisgabe dieser Daten seitens des Nutzers auf ausdrücklich freiwilliger Basis. Die Inanspruchnahme und Bezahlung aller angebotenen Dienste ist – soweit technisch möglich und zumutbar – auch ohne Angabe solcher Daten bzw. unter Angabe anonymisierter Daten oder eines Pseudonyms gestattet. Die Nutzung der im Rahmen des Impressums oder vergleichbarer Angaben veröffentlichten Kontaktdaten wie Postanschriften, Telefon- und Faxnummern sowie Emailadressen durch Dritte zur Übersendung von nicht ausdrücklich angeforderten Informationen ist nicht gestattet. Rechtliche Schritte gegen die Versender von sogenannten Spam-Mails bei Verstössen gegen dieses Verbot sind ausdrücklich vorbehalten.</p>
+                            <p><span class="more">5. Rechtswirksamkeit dieses Haftungsausschlusses</span><br />Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem Inhalt und ihrer Gültigkeit davon unberührt.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Konzept Modal -->
             <div class="modal fade" id="conceptModal" tabindex="-1" role="dialog" aria-labelledby="conceptModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
